--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#"
-                >Home
+                >Inicio
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#">Acerca de</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="#">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#">Contáctanos</a>
             </li>
           </ul>
         </div>
@@ -79,13 +79,14 @@
               class="card-img-top"
               src="https://img.vixdata.io/pd/jpg-large/es/sites/default/files/imj/entrepadres/b/beneficios-de-comer-queso-en-ninos-%201.jpg"
               alt=""
-              style="height: 170px; width: 255px"
             />
             <div class="card-body">
               <h4 class="card-title">QUESO SM</h4>
               <p class="card-text">
-                Queso de excelente calidad a un precio muy adsequible. 5.500 $
-                COP X 250g
+                El queso es una de las principales fuentes de calcio, un mineral
+                fundamental para la salud de los huesos y de los dientes. Además
+                la absorción del calcio se ve favorecida por la proteína que
+                contiene el queso.
               </p>
             </div>
             <div class="card-footer">
@@ -100,12 +101,15 @@
               class="card-img-top"
               src="https://ichef.bbci.co.uk/news/640/cpsprodpb/5B4A/production/_110207332_gettyimages-1084228336.jpg"
               alt=""
-              style="height: 170px; width: 255px"
             />
             <div class="card-body">
               <h4 class="card-title">LECHE SM</h4>
               <p class="card-text">
-                Leche de la mejor calidad y precio. 3.100 $ COP X 100ml
+                Las razones para consumir leche de vaca son muchas, es una
+                fuente importante de calcio, fósforo y vitamina D y un
+                equilibrio de otros nutrientes que han sido probados para
+                construir los huesos y dientes, pero enlistemos los principales
+                beneficios de consumir la auténtica leche de vaca.
               </p>
             </div>
             <div class="card-footer">
@@ -120,13 +124,14 @@
               class="card-img-top"
               src="https://ichef.bbci.co.uk/news/640/amz/worldservice/live/assets/images/2015/10/05/151005121413_yogurt2.png"
               alt=""
-              style="height: 170px; width: 255px"
             />
             <div class="card-body">
               <h4 class="card-title">YOGURT SM</h4>
               <p class="card-text">
-                El yogurt más delicioso y cremoso al mejor precio. 6.200 $ COP X
-                1000g
+                De forma general el yogur contiene proteínas muy útiles para el
+                ser humano y con una mayor digestibilidad que la leche. Además,
+                es una buena fuente de vitaminas del grupo B y A y una excelente
+                fuente de minerales como el calcio, fósforo, magnesio y zinc.
               </p>
             </div>
             <div class="card-footer">
@@ -141,13 +146,16 @@
               class="card-img-top"
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSeVSIqnhSo5IEhhQ4QRhCAJa2lkX1mu8AUDg&usqp=CAU"
               alt=""
-              style="height: 170px; width: 255px"
             />
             <div class="card-body">
               <h4 class="card-title">KUMIS SM</h4>
               <p class="card-text">
-                El sabor de la costa en un recipiente. Prueba nuestro excelente
-                Kumis. 2.000 $ COP X 200g
+                El kumis nos aporta calcio, fósforo, vitaminas B2, D y B12,
+                magnesio, proteína, grasa, entre otros nutrientes esenciales
+                para el correcto funcionamiento de nuestro organismo. Por esto,
+                podemos deducir que es un alimento que no puede faltar en
+                nuestra mesa. ¿Qué esperas para consumir un delicioso vaso de
+                kumis a esta hora?
               </p>
             </div>
             <div class="card-footer">
